deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memphis
  labels:
    app: memphis
spec:
  selector:
    app: memphis
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: memphis-public
  labels:
    app: memphis
spec:
  selector:
    app: memphis
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
