deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memphis
  labels:
    app: memphis
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
    - host: memphis.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memphis
                port:
                  number: 80
